@@ -1,0 +1,6 @@
+def trans(psy):
+    # this will produce a runtime error as b has not been assigned
+    psy = b
+    return psy
+
+
