@@ -25,6 +25,11 @@
 	dir() command, remove additional '_code' from kernel subroutine name
 	and add 'implicit none' to the generated subroutine.
 	
+	8) #363 Update to the generator script to catch any run-time
+	errors generated by the user-supplied optimisation script. Such
+	errors are then reported in a user-friendly fashion to aid
+	debugging.
+
 release 1.0.2
 
 	1) #299 temporary boundary condition
